--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -109,8 +109,8 @@
 
 \begin{figure}
 \centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/}
-\caption{\label{fig:figS1} Demographic models of Neandertal introgression into non-Africans used for the simulations. A) Simple demographic model used for ALD simulations with constant population sizes. B) Complex demographic model with population size changes derived from \cite{skov_detecting_2018}}
+\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/Simple_and_Skov.pdf}
+\caption{\label{fig:figS1} Demographic models of Neandertal introgression into non-Africans used for the simulations. A) Simple demographic model used for ALD simulations with constant population sizes. B) Complex demographic model with population size changes derived from Skov et al. 2018.}
 \end{figure}
 
 \begin{figure}
@@ -119,16 +119,11 @@
 \caption{\label{fig:figR1_error_ests} Power analysis parameter estimates}
 \end{figure}
 
-\begin{figure}
-\centering
-\includegraphics{ATE_Revisions_files/figure-latex/figResult3_1_Supplement-1.pdf}
-\caption{\label{fig:figResult3_1_Supplement} Simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago. A) Mean time estimates. B) Duration estimate.}
-\end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{ATE_Revisions_files/figure-latex/figResult2_1_Supplement-1.pdf}
-\caption{\label{fig:figResult3_1_Supplement} Simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago. A) Mean time estimates. B) Duration estimate.}
+\caption{\label{fig:figResult2_1_Supplements} Simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago. A) Mean time estimates. B) Duration estimate.}
 \end{figure}
 
 \begin{figure}
@@ -142,13 +137,13 @@ OR
 \begin{figure}
 \centering
 \includegraphics{ATE_Revisions_files/figure-latex/figResult2_2_Supplements-1.pdf}
-\caption{\label{fig:figResult3_2_Supplements} Fit to the data}
+\caption{\label{fig:figResult2_2_Supplements} Fit to the data}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{ATE_Revisions_files/figure-latex/figResult2_3_supplements-1.pdf}
-\caption{\label{fig:figResult3_3_supplements} Log likelihood ratio between the simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago.}
+\caption{\label{fig:figResult2_3_Supplements} Log likelihood ratio between the simple and extended pulse fitted to ALD data for different gene flow durations with mean admixture time at 1500 gnerations ago.}
 \end{figure}
 
 \begin{figure}
